# qmk-hid-identify

./: .appveyor.yml  .travis.yml  CHANGELOG.rst  README.rst  requirements.txt
.uuid-uk/: Dockerfile  Jenkinsfile
common/: hid-device.cc  hid-device.h  types.h  usb-vid-pid.c  usb-vid-pid.cc  usb-vid-pid.h
linux/: .gitignore  Makefile  README.rst  hid-identify.cc  hid-identify.h  hid-report-desc.c  hid-report-desc.cc  hid-report-desc.h  logging.h  main.cc  meson.build  qmk-hid-identify.cc  qmk-hid-identify.h  udev.rules  unique-fd.h
windows/: Makefile  README.rst  app.rc  cross32.ini  cross64.ini  events.mc  hid-enumerate.cc  hid-enumerate.h  hid-identify.cc  hid-identify.h  logging.h  main.cc  meson.build  qmk-hid-identify.cc  qmk-hid-identify.h  registry.cc  registry.h  service-control.cc  service-control.h  service.cc  service.h  version.h.in  windows++.cc  windows++.h
